# vibeflow

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  MODEL_SWITCHING.md  README.md  SETUP.md  SUCCESS.md  VibeFlow.bat  VibeFlow.vbs  fix_cuda.bat  install.bat  install_cpu.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  test_settings.py
config/: settings.yaml  vocabulary.txt
config/vocabulary/: general_medical.txt  hospitalist.txt  neurology.txt
resources/: Info.plist
scripts/: build.sh  download-model.sh
src/: App.cpp  App.h  AudioCapture.cpp  AudioCapture.h  HotkeyMonitor.cpp  HotkeyMonitor.h  HotkeyMonitor.mm  TextPaster.h  TextPaster.mm  Transcriber.cpp  Transcriber.h  TranscriptionServer.cpp  TranscriptionServer.h  main.cpp
src/data/: SettingsManager.cpp  SettingsManager.h
src/medasr/: __init__.py  __main__.py  app.py  config.py
src/medasr/audio/: __init__.py  capture.py
src/medasr/history/: __init__.py  storage.py
src/medasr/input/: __init__.py  hotkeys.py  typer.py
src/medasr/postprocessing/: __init__.py  formatter.py
src/medasr/transcription/: __init__.py  medasr_model.py  parakeet_model.py  whisper_model.py  whisper_variants.py
src/medasr/ui/: bubble.py  formatting_tab.py  history_tab.py  models_tab.py  settings_window.py  styles.py  tray.py  vocabulary_tab.py  waveform.py
src/medasr/vocabulary/: manager.py
src/ui/: GlassBubble.h  GlassBubble.mm  RecentTranscriptionsDialog.cpp  RecentTranscriptionsDialog.h  TrayIcon.cpp  TrayIcon.h  VocabularyDialog.cpp  VocabularyDialog.h  WaveformWidget.cpp  WaveformWidget.h
